# Circuits

./: CMakeLists.txt
include/: ANDGateDrawable.cpp  ANDGateDrawable.h  App.cpp  App.h  ComponentDrawable.cpp  ComponentDrawable.h  ComponentLogic.cpp  ComponentLogic.h  DotDrawable.cpp  DotDrawable.h  DrawableManager.cpp  DrawableManager.h  FileManager.cpp  FileManager.h  NOTGateDrawable.cpp  NOTGateDrawable.h  ORGateDrawable.cpp  ORGateDrawable.h  UIManager.cpp  UIManager.h  mainDrawableTeste.cpp
include/graphics/: ComponentDrawable.cpp  ComponentDrawable.h  DrawableManager.cpp  DrawableManager.h
include/graphics/and/: ANDGateDrawable.cpp  ANDGateDrawable.h
include/graphics/dot/: DotDrawable.cpp  DotDrawable.h
include/graphics/not/: NOTGateDrawable.cpp  NOTGateDrawable.h
include/graphics/or/: ORGateDrawable.cpp  ORGateDrawable.h
include/graphics/wire/: WireDrawable.cpp  WireDrawable.h
include/graphics/xor/: XORGateDrawable.cpp  XORGateDrawable.h
include/logic/: ComponentLogic.cpp  ComponentLogic.h  LogicManager.cpp  LogicManager.h
include/logic/and/: ANDGateLogic.cpp  ANDGateLogic.h
include/logic/not/: NOTGateLogic.cpp  NOTGateLogic.h
include/logic/or/: ORGateLogic.cpp  ORGateLogic.h
include/logic/wire/: WIRELogic.cpp  WIRELogic.h
include/logic/xor/: XORGateLogic.cpp  XORGateLogic.h
src/: main.cpp
